--- a/css/style.css
+++ b/css/style.css
@@ -360,6 +360,7 @@ body{
 .project-image{
     border-top-right-radius: 1rem;
     border-top-left-radius: 1rem;
+    width: 300px;
 }
 .project-descriptions{
     padding: 1rem;
